# OrbWeaver

./: CMakeLists.txt  OrbWeaverConfig.cmake  README  README.md  StackConfig.cmake
POSIX/: create.c  implement.h  unistd.h
StackHost/: StackHost.cpp  StackHost.h  main.cpp
StackHost/Jansson/src/: hashtable_seed.c
StackHost/WolfSSL/src/: internal.c
StackHost/core/: global.c  global.h  http.c  http.h  http_multipart.c  http_parser.h  https.c  net.cpp  net.h  port.h
StackHost/dal/: dal.h  dal_core.c  dal_core.cpp  dal_pgsql.c
StackHost/stack/: stack_ext_framework.cpp  stack_ext_network.c  stack_port.c
StackHost/util/: minIni.c  minIni.h  util.cpp  util.h
StackLib/: AssemblyInfo.cpp  StackAssembler.cpp  StackConsole.cpp  StackLib.cpp  StackLib.h  Stdafx.cpp  config.h  defs.h  stack_wrap_aes.cpp  stack_wrap_crypto.cpp  stack_wrap_des.cpp
StackLib/Stack/: StackUnmanaged.cpp  asm_streamer.h  build.h  getopt.h  il1_optimizer.c  il1_optimizer.h  il2_optimizer.c  il2_optimizer.h  il_streamer.c  il_streamer.h  lex.yy.c  lex_proto.c  lex_proto.h  pkg_encoder.c  pkg_encoder.h  pkg_encoder_apis.c  pkg_linker.c  pkg_linker.h  scr_generator.c  scr_generator.h  sem_proto.c  sem_proto.h  stack.lex  stack.tab.c  stack.y  stack_tab.c  stack_wrap_l1_optimizer.cpp  stack_wrap_l2_optimizer.cpp  stack_wrap_lexer.cpp  stack_wrap_packager.cpp  stack_wrap_parser.cpp  stack_wrap_streamer.cpp  stack_wrap_table.cpp  sym_table.c  sym_table.h  token.h
StackLib/StackVM/: build_int.h  build_vm.h  dlfcn.c  midgard.c  midgard.h  midgard_apis.c  stack_abis_sysv_x64.c  stack_abis_sysv_x64_interface.s  stack_abis_win64_x64.cpp  stack_abis_win64_x64_interface.asm  stack_wrap_midgard.cpp  stack_wrap_vm.cpp  vm_framework.c  vm_framework.h  vm_interpreter.c  vm_stack.c  vm_stack.h  vm_stack_apis.c  vm_stream.c  vm_stream.h
StackLib/crypto/inc/: cr_apis.h
StackLib/crypto/src/: cr_aes.c  cr_core.c  cr_crc.c  cr_crc.h  cr_crypt.c  cr_des.c  cr_des.h  cr_mac.c  cr_md5.c  cr_pandora.c  cr_sha1.c  cr_sha256.c
StackLib/libcgi/src/: base64.c  cgi.c  cookie.c  error.c  general.c  list.c  md5.c  session.c  string.c
Torus/: Torus.cpp  stdafx.cpp
include/: orbweaver.h
